--- a/views/layout.slim
+++ b/views/layout.slim
@@ -12,10 +12,16 @@ html lang="en"
                 section.link_b 
                     a.nav_link href="/"Home
                 section.link_b 
-                    a.nav_link href="/teams/new"Create Team
+                    a.nav_link href="/teams/new"New Team
                 section.link_b 
-                    a.nav_link href="/teams/show"My Team 
+                    a.nav_link href="/teams/show"My Teams 
                 section.link_b 
-                    a.nav_link href="/account"Login
+                    a.nav_link href="/pokemon/new"New Pokémon 
+                section.link_b
+                    a.nav_link href="/pokemon/show"My Pokémons
+                section.link_b
+                    a.nav_link href="/account"Account
+                section.link_b 
+                    a.nav_link href="/dex"Dex
 
 == yield 
