--- a/views/layout.slim
+++ b/views/layout.slim
@@ -16,7 +16,7 @@ html lang="en"
                 section.link_b 
                     a.nav_link href="/teams/show"My Teams 
                 section.link_b 
-                    a.nav_link href="/pokemon/new"New Pokémon 
+                    a.nav_link href="/pokemon/"New Pokémon 
                 section.link_b
                     a.nav_link href="/pokemon/show"My Pokémons
                 section.link_b
