--- a/views/layout.slim
+++ b/views/layout.slim
@@ -4,7 +4,7 @@ html lang="en"
         meta charset="UTF-8"/
         meta http-equiv="X-UA-Compatible" content="IE=edge"/
         meta name="viewport" content="width=device-width, initial-scale=1.0"/
-        title Shiritori
+        title Shirona
         link rel="stylesheet" href="/css/style.css"
     body 
         nav.nav_head
@@ -14,11 +14,11 @@ html lang="en"
                 section.link_b 
                     a.nav_link href="/teams/new"New Team
                 section.link_b 
-                    a.nav_link href="/teams/show"My Teams 
+                    a.nav_link href="/teams/"My Teams 
                 section.link_b 
-                    a.nav_link href="/pokemon/"New Pokémon 
+                    a.nav_link href="/pokemon/new"New Pokémon 
                 section.link_b
-                    a.nav_link href="/pokemon/show"My Pokémons
+                    a.nav_link href="/pokemon/"My Pokémons
                 section.link_b
                     a.nav_link href="/account"Account
                 section.link_b 
