--- a/views/pokemon/update.slim
+++ b/views/pokemon/update.slim
@@ -1,10 +1,9 @@
-h2 #{pokemon[0][1]}
-img src="img/#{pokemon[0][2]}" alt="#{pokemon[0][2]}"
-form action="pokemon" method="post" 
-    select name="pokemon"
-        option value="#{pokemon[0][1]}" 
-    h3 Nickname
-    input type="text" name="nickname" value="#{pokemon[0][1]}" 
+form action="/pokemon/#{current[0]["id"]}/delete" method="post" 
+    input type="submit" value="Delete"
+h2 Edit: #{current[0]["nickname"]}
+form action="/pokemon/#{current[0]["id"]}/update" method="post"
+    h3 Nickname:
+    input type="text" name="nickname" value="#{current[0]["nickname"]}"
     h3 Ability: 
     select name="ability" 
         - ability.each do |n|
@@ -33,4 +32,4 @@ form action="pokemon" method="post"
     select name="move4"
         - moves.each do |n|
             option value="#{n["name"]}"#{n["name"]}
-    input type="submit" value="Create Pokémon"
+    input type="submit" value="Update Pokémon"
